--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -19,7 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+  
     - name: Run tests
       run: |
         pytest
+    - name: Build Docker Image
+      run: |
+        docker build -t python-ci-app .
