--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -26,3 +26,14 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t python-ci-app .
+    - name: Run tests with coverage
+      run: |
+        coverage run -m pytest
+        coverage report
+          coverage xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+       files: coverage.xml
+    
+  
